# selective-disclosure-app

./: .clangd  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: e2e.yml  license-headers.yml  sd_cwt.yml  token_core.yml
app/: CMakeLists.txt
app/src/: app.cpp  cbor.h  default_on_commit.h  disclosure_store.cpp  disclosure_store.h  main.cpp  paging.h  report_parse.cpp  report_parse.h  reports.h
app/src/token/: cbor.h  cbor_value.cpp  cbor_value.h  cose.cpp  cose.h  sd_cwt.cpp  sd_cwt.h  sd_cwt_internal.h  statement.cpp  statement.h  statement_internal.h
app/unit-tests/: conformance_test.cpp  cose_test.cpp  disclosure_store_test.cpp  main.cpp  paging_test.cpp  report_parse_test.cpp  sd_cwt_test.cpp  statement_test.cpp
demo/: demo.py  run_demo.sh  run_web_demo.sh
demo/webapp/: README.md  events.py  ledger_client.py  requirements.txt  server.py
demo/webapp/static/: app.css  app.js
demo/webapp/templates/: base.html  client.html  index.html  member.html  operator.html  researcher.html  wall.html
docker/: build-app.sh  build-ccf.sh  build-image.sh  dev.sh
docs/: API.md  DESIGN.md
scripts/: ci-cpp-tests.sh  ci-e2e-tests.sh  notice-check.py  setup-sandbox-venv.sh  validate-cddl.sh
spec/: api.cddl  statement.cddl
test/e2e/: client.py  conftest.py  helpers.py  requirements-ccf.txt  requirements.txt  sandbox.py  test_recovery.py  test_reports.py
tools/sd_cwt/: README.md  pyproject.toml
tools/sd_cwt/scripts/: checks.sh  notice_check.py
tools/sd_cwt/src/sd_cwt/: __init__.py  core.py  statement.py
tools/sd_cwt/tests/: test_array.py  test_conformance.py  test_cpp_conformance.py  test_features.py  test_negative.py  test_nesting.py  test_roundtrip.py  test_statement.py  test_vectors.py
