[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sd_cwt"
version = "0.0.1"
description = "Minimal Selective Disclosure CBOR Web Token (SD-CWT) — custom profile"
requires-python = ">=3.10"
dependencies = [
    "pycose>=1.1.0",
    "cbor2>=5.6",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
